# CMake-in-Multiple-Platforms

./: CMakeLists.txt  README.md  cmake.sh  msys2-pacman-install.md  run.sh  test_main.cpp
