cmake_minimum_required(VERSION 3.10)
project(GoogleTestExample)

# Enable testing
enable_testing()

# Set C++ standard
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)

# Fetch GoogleTest (if not already available)
include(FetchContent)
FetchContent_Declare(
  googletest
  GIT_REPOSITORY https://github.com/google/googletest.git
  GIT_TAG release-1.12.1
)
# Prevent overriding the parent project's compiler/linker settings
set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(googletest)

# Add the test executable
add_executable(test_main test_main.cpp)

# Link with GoogleTest and GoogleMock
target_link_libraries(test_main PRIVATE gtest gtest_main)

# Add tests to CTest
add_test(NAME ExampleTest COMMAND test_main)
